output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_993.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_993.py", line 136
    s.add(
         ^
SyntaxError: '(' was never closed
